# SimpleVideo

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/simple/video/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/simple/video/: CodeLogProxy.java  MainActivity.java  MainActivity2.java
app/src/main/java/com/tencent/avroom/: AAAA.java  TXCAVRoom.java  TXCAVRoomCallback.java  TXCAVRoomConfig.java  TXCAVRoomConstants.java  TXCAVRoomLisenter.java  TXCAVRoomParam.java  b.java  c.java
app/src/main/java/com/tencent/liteav/: CameraProxy.java  CaptureAndEnc.java  TXCRenderAndDec.java  TXLiteAVCode.java  a.java  b.java  e.java  f.java  g.java  h.java  i.java  j.java  k.java  l.java  m.java  n.java  o.java  p.java  q.java  r.java  s.java  t.java  u.java
app/src/main/java/com/tencent/rtmp/: ITXLiveBaseListener.java  ITXLivePlayListener.java  ITXLivePushListener.java  ITXVodPlayListener.java  TXBitrateItem.java  TXImageSprite.java  TXLiveBase.java  TXLiveConstants.java  TXLivePlayConfig.java  TXLivePlayer.java  a.java  (+7 more)
app/src/main/res/layout/: activity_live_push.xml  activity_main.xml  activity_main2.xml
app/src/main/res/values/: strings.xml
captures/: com.simple.video_2020.03.30_16.56.li
gradle/wrapper/: gradle-wrapper.properties
player/: CMakeLists.txt  build.gradle
player/src/androidTest/java/com/simple/player/: ExampleInstrumentedTest.java
player/src/main/: AndroidManifest.xml
player/src/main/cpp64/: JniInit.cpp
player/src/main/cpp64/editor/: FFmpegCommon.h  Init_Editor.h  MediaEditor.cpp  MediaEditor.h  MediaHelper.cpp  MediaHelper.h  MediaTranscoder.cpp  MediaTranscoder.h
player/src/main/cpp64/include/: x264.h
player/src/main/cpp64/include/libavcodec/: avcodec.h
player/src/main/cpp64/include/libavutil/: common.h
player/src/main/cpp64/player/: Init_Player.h  MediaPlayer.cpp  MediaPlayer.h
player/src/main/cpp64/tool/: Init_Tool.h  JniLog.h
player/src/main/java/com/simple/player/editor/: MediaEditModel.java  MediaHelper.java
player/src/main/java/com/simple/player/media/: DPPlayer.java
player/src/main/java/com/simple/player/tools/: CustomFFmpeg.java  MediaEnvHelper.java
player/src/test/java/com/simple/player/: ExampleUnitTest.java
rtmp-client/: CMakeLists.txt  build.gradle
rtmp-client/src/main/: AndroidManifest.xml
rtmp-client/src/main/cpp/: RTMPHelper.cpp  RTMPHelper.h  push.cpp  rtmp-init.cpp
rtmp-client/src/main/cpp/librtmp/: log.c  rtmp.c
(+481 files in other folders)
